--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -5,6 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.min.css">
+	<!-- <script src="js/TweenMax.min.js" defer></script>
+	<script src="js/pixi.min.js" defer></script>
+	<script src="js/rgbKineticSlider.js" defer></script>
+	<script src="./js/script.js" defer></script> -->
 	<script src="js/main.min.js" defer></script>
 </head>
 <body>
